# ecm-website

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  Dockerfile  Procfile  RAILWAY_ENV_SETUP.md  README.md  RESPONSIVE_CHANGES.md  Redeploy.ps1  cleanup_review.txt  deploy.sh  manage.py  package-lock.json  package.json  pyproject.toml  railway.app.toml  railway.toml  railway_deploy.sh  railway_setup.sh  redeploy.sh  requirements.txt  robots.txt  start.sh  tailwind.config.js
.nixpacks/: config.toml
config/: coverage.ini  nixpacks.toml  pytest.ini
docs/: MEMORY_MANAGEMENT.md  NGROK_DEPLOYMENT_GUIDE.md  SEO_OPTIMIZATION_GUIDE.md
ecm_website/: asgi.py  context_processors.py  health.py  logging.py  middleware.py  no_redirect_middleware.py  settings.py  simple_health.py  sitemaps.py  test_settings.py  urls.py  views.py  wsgi.py
ecm_website/settings/: base.py  dev.py  production.py
parts/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py  widgets.py
parts/migrations/: 0001_initial.py  0002_part_stock.py  0002_remove_engine_truck_model_engine_truck_models.py  0002_truckmodel_description_truckmodel_image.py  (+9 more)
scripts/: Fix-SecretKey.ps1  fix_ngrok.bat  fix_secret_key.py  generate_secret_key.py  manage_memory.ps1  memory_helper.bat  prepare_db.py  rename_part_images.py  run_django_optimized.py  setup_ngrok_auth.bat  start_ngrok.bat  start_server_and_ngrok.bat
templates/: 404.html  500.html  about.html  base.html  contact.html  home.html  home_structured_data.html  inquiry.html  robots.txt  sitemap.xml
(+33 files in other folders)
