[tool.poetry]
name = "ecm-website"
version = "0.1.0"
description = "Magirus Center Website"
authors = ["Mohammed-ahmady"]

[tool.poetry.dependencies]
python = "^3.13"
Django = "5.2.3"
python-decouple = "3.8"
Pillow = "10.4.0"
django-environ = "0.11.2"
django-ratelimit = "4.1.0"
django-cors-headers = "4.3.1"
gunicorn = "23.0.0"
whitenoise = "6.9.0"
psycopg2-binary = "2.9.10"
dj-database-url = "3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
